    - System/DataDocument screens now in moqui-elasticsearch component and
      added to tools/System app through SubscreensItem record
    - all ElasticSearch services in org.moqui.impl.EntityServices moved to
      org.moqui.elasticsearch.SearchServices including:
      index#DataDocuments, put#DataDocumentMappings,
      index#DataFeedDocuments, search#DataDocuments, search#CountBySource
    - ElasticSearch dependent REST API methods moved to the 'elasticsearch'
      REST API in the moqui-elasticsearch component
  - Apache FOP is now in the moqui-fop tool component; everything in the
    framework, including the now poorly named MoquiFopServlet, use generic
    interfaces but XML-FO files will not transform to PDF/etc without this
    component in place
  - OrientDB and Entity Facade interface implementations are now in the
    moqui-orientdb component, see its README.md for usage
  - Apache Camel along with the CamelServiceRunner and MoquiServiceEndpoint
    are now in the moqui-camel component which has a MoquiConf.xml file so
    no additional configuration is needed
  - JBoss KIE and Drools are now in tool component moqui-kie, an optional
    component for mantle-usl; has MoquiConf to add ToolFactory
  - Atomikos TM moved to moqui-atomikos tool component
- ExecutionContext and ExecutionContextFactory
  - Removed initComponent() and destroyComponent() methods; were never well
    supported (runtime component init and destroy caused issues)
  - Removed getCamelContext() from ExecutionContextFactory and
    ExecutionContext, use getTool("Camel", CamelContext.class)
  - Removed getElasticSearchClient() from ExecutionContextFactory and
    ExecutionContext, use getTool("ElasticSearch", Client.class)
  - Removed getKieContainer, getKieSession, and getStatelessKieSession
    methods from ExecutionContextFactory and ExecutionContext, use
    getTool("KIE", KieToolFactory.class) and use the corresponding
    methods there